--- a/index.html
+++ b/index.html
@@ -2,38 +2,18 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Formulário</title>
+	<title>Navegação</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div>
-		<h1>Formulário - Cadastro das Comissões</h1>
-		<form id="form" method="post" >
-			<label for="nome">Nome da Comissão</label><br>
-			<input type="text" id="name" placeholder="Nome"><br>
+	<ul>
+		<li><a href="cadastro.html">Cadastro</a></li>
+		<li><a href="listagem.html">Listagem</a></li>
+	</ul>
 
-			<label for="empresa">Empresa Contratada</label><br>
-			<input type="text" id="empresa" placeholder="Empresa"><br>
-
-			<label for="gastos">Gastos</label><br>
-			<input type="text" id="gastos" placeholder="Gastos"><br>
-
-			<label for="ano">Semestre da formatura</label><br>
-			<input type="text" id="ano" placeholder="Primeiro/Segundo/Ano"><br>
-
-			<label for="preco">Preço da adesão</label><br>
-			<input type="text" id="price" placeholder="R$ 00,00"><br>
-
-			<label for="email">Email</label><br>
-			<input type="email" id="email" placeholder="xpto@email.com"><br>
-			<input type="submit" value="Submit">
-		</form>
-	</div>
-
-	<script src="js/vendor/modernizr-3.8.0.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"</script>
-	<script src="js/main.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
