--- a/listagem.html
+++ b/listagem.html
@@ -9,6 +9,9 @@
 <body>
 	<a href="index.html">Voltar</a>
 	<br>
+	<ul id="comissoes"></ul>
+	<div id="comissao"></div>
+	<br>
 	<code id="display" style="white-space: pre;"></code>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
