--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="utf-8">
 	<title>Navegação</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -13,7 +12,7 @@
 		<li><a href="listagem.html">Listagem</a></li>
 	</ul>
 
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"</script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script src="js/index.js"></script>
 </body>
 </html>
